[B]Retrospect v5.7.x - Changelog - 2025-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
* Fixed: Import issue with Python 3.13 and above.
* Fixed: Remove search history item with space or special chars.

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: Video land duplicate entries.